--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,24 +4,33 @@ spring.security.user.name=admin
 spring.security.user.password=1234
 
 
-#registration
-spring.security.oauth2.client.registration.naver.client-name=naver
-spring.security.oauth2.client.registration.naver.client-id=s1eNnSZ0PQjslekfZD2n
-spring.security.oauth2.client.registration.naver.client-secret=iPOfJsXqoW
-spring.security.oauth2.client.registration.naver.redirect-uri=http://localhost:8080/login/oauth2/code/naver
-spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.naver.scope=name,email
+##registration
+#spring.security.oauth2.client.registration.naver.client-name=naver
+#spring.security.oauth2.client.registration.naver.client-id=s1eNnSZ0PQjslekfZD2n
+#spring.security.oauth2.client.registration.naver.client-secret=iPOfJsXqoW
+#spring.security.oauth2.client.registration.naver.redirect-uri=http://localhost:8080/login/oauth2/code/naver
+#spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
+#spring.security.oauth2.client.registration.naver.scope=name,email
+#
+##provider
+#spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
+#spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
+#spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
+#spring.security.oauth2.client.provider.naver.user-name-attribute=response
+#
+##registration
+#spring.security.oauth2.client.registration.google.client-name=google
+#spring.security.oauth2.client.registration.google.client-id=1041467923006-8quikc4snqvcbo67bie04unvsqqj6r3n.apps.googleusercontent.com
+#spring.security.oauth2.client.registration.google.client-secret=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
+#spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
+#spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
+#spring.security.oauth2.client.registration.google.scope=profile,email
 
-#provider
-spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
-spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
-spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
-spring.security.oauth2.client.provider.naver.user-name-attribute=response
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/oAuth_session?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=mypassword
 
-#registration
-spring.security.oauth2.client.registration.google.client-name=google
-spring.security.oauth2.client.registration.google.client-id=1041467923006-8quikc4snqvcbo67bie04unvsqqj6r3n.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
-spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
-spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.google.scope=profile,email
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
